outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_23-14-52/evaluations/problem_eval-3632963122480084080_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance using a temperature-based scoring system, where importance is calculated as the ratio of a node's centrality to its distance from the current node, and the temperature adjusts from exploration to exploitation as unvisited nodes decrease, with tie-breaking based on cumulative future distance and node degree.}
                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance using a temperature-based scoring system, where importance is calculated as the ratio of a node's centrality to its distance from the current node, and the temperature adjusts from exploration to exploitation as unvisited nodes decrease, with tie-breaking based on cumulative future distance and node degree.}
                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)
